changed uniqueness validation message for user model

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,4 +6,9 @@ en:
     errors:
       messages:
         blank: 'is required'
+      models:
+        user:
+          attributes:
+            email:
+              taken: 'Already being used'
 
