--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,5 +10,5 @@ en:
         user:
           attributes:
             email:
-              taken: 'Already being used'
+              taken: 'already in use'
 
